--- a/src/main/resources/static/css/showStudentByPage.css
+++ b/src/main/resources/static/css/showStudentByPage.css
@@ -26,3 +26,16 @@ h1{
     top: 30px;
     text-align: center;
 }
+button{
+    width: 75px;
+    min-height: 20px;
+    display: block;
+    background-color: #4a77d4;
+    border: 1px solid #3762bc;
+    color: #fff;
+    padding: 9px 14px;
+    font-size: 15px;
+    line-height: normal;
+    border-radius: 5px;
+    margin: 20px auto;
+}
